--- a/modules/server/src/main/resources/vm/install.html
+++ b/modules/server/src/main/resources/vm/install.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 
-<head>
-    #parse("./common/head.vm")
+<head th:include="common/head::head">
     <title>初始化系统-项目管理系统</title>
 </head>
 
 <body>
 <div class="layui-carousel" id="div-carousel" style="width: 100%; height: 100%; position: fixed; z-index: 0;">
     <div carousel-item>
-        <div><img src="$!jpomProxyPath/static/backgrounds/1.jpg?v=$staticCacheTime" style="width: 100%;"></div>
+        <div><img th:src="@{${session.jpomProxyPath}+'/static/backgrounds/1.jpg?v='+${session.staticCacheTime}}"
+                  style="width: 100%;">
+        </div>
     </div>
 </div>
 <div class="layui-container" style="margin-top: 150px;">
@@ -42,8 +43,8 @@
         </div>
     </div>
 </div>
+<div th:replace="common/sha1::sha1"></div>
 </body>
-    #parse("./common/sha1.vm")
 <script type="text/javascript">
     function loadSuccess() {
         layui.use(['carousel'], function () {
