--- a/modules/server/src/main/resources/vm/common/head.html
+++ b/modules/server/src/main/resources/vm/common/head.html
@@ -17,6 +17,10 @@
           th:href="@{${session.jpomProxyPath}+'/static/layui/css/layui.css?v='+${session.staticCacheTime}}"
           media="all">
     <style>
+        body {
+            padding: 10px;
+        }
+
         .x-red {
             color: red;
         }
