--- a/modules/server/src/main/resources/vm/common/indexMenus.html
+++ b/modules/server/src/main/resources/vm/common/indexMenus.html
@@ -2,6 +2,11 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml" lang="zh">
 <div th:fragment="indexMenus">
     <style type="text/css">
+        body {
+            padding: 0;
+            margin: 0;
+        }
+
         /* 选项卡 */
         .layui-tab {
             margin: 0;
