--- a/modules/server/src/main/resources/vm/error.html
+++ b/modules/server/src/main/resources/vm/error.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 
-<head th:include="common/head::head">
+<head th:replace="common/head::head">
 </head>
 <body>
 <h1 align="center" th:text="${msg!=null?msg:'系统发生错误啦'}">
