--- a/modules/server/src/main/resources/vm/node/index.html
+++ b/modules/server/src/main/resources/vm/node/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 
-<head th:include="common/head::head">
-</head>
+<head th:replace="common/head::head"></head>
 
 <body class="layui-layout-body">
 
