--- a/modules/server/src/main/resources/vm/login.html
+++ b/modules/server/src/main/resources/vm/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:include="common/head::head">
+<head th:replace="common/head::head">
 </head>
 
 <body>
