--- a/modules/server/src/main/resources/vm/node/edit.html
+++ b/modules/server/src/main/resources/vm/node/edit.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 
-<head>
-    #parse("./common/head.vm")
-    <title>项目管理系统</title>
-    <style>
-        body {
-            padding: 10px;
-        }
-    </style>
+<head th:replace="common/head::head">
 </head>
 <body>
 <div class="layui-container">
@@ -17,17 +10,18 @@
             <div class="layui-inline">
                 <label class="layui-form-label">节点ID</label>
                 <div class="layui-input-block">
-                    <input type="text" id="id" name="id" value="$!item.id" placeholder="创建后不能修改" class="layui-input"
+                    <input type="text" id="id" name="id" th:value="${item?.id}" placeholder="创建后不能修改"
+                           class="layui-input"
                            required
-                           #if($item)readonly#end
+                           th:readonly="${item}"
                            lay-verify="required">
-                    <input type="hidden" name="type" value="$!type">
+                    <input type="hidden" name="type" th:value="${type}">
                 </div>
             </div>
             <div class="layui-inline">
                 <label class="layui-form-label">节点名称</label>
                 <div class="layui-input-block">
-                    <input type="text" id="name" name="name" value="$!item.name" placeholder="请填写节点名称"
+                    <input type="text" id="name" name="name" th:value="${item?.name}" placeholder="请填写节点名称"
                            class="layui-input"
                            required
                            lay-verify="required">
@@ -39,8 +33,8 @@
                 <label class="layui-form-label">节点协议</label>
                 <div class="layui-input-block">
                     <select name="protocol" lay-verify="required" lay-filter="aihao">
-                        <option value="http" #if($item.protocol=="http")selected #end>http</option>
-                        <option value="https" #if($item.protocol=="https")selected #end>https</option>
+                        <option value="http" th:selected="${item?.protocol=='http'}">http</option>
+                        <option value="https" th:selected="${item?.protocol=='https'}">https</option>
                     </select>
                 </div>
             </div>
@@ -48,9 +42,8 @@
                 <label class="layui-form-label">节点状态</label>
                 <div class="layui-input-block">
                     <input type="checkbox" value="true"
-                        #if(!$item || $item.openStatus)
-                           checked
-                        #end
+
+                           th:checked="${item?.openStatus || item==null}"
                            name="openStatus"
                            lay-skin="switch"
                            lay-text="启用|停用">
@@ -61,7 +54,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">节点地址</label>
             <div class="layui-input-block">
-                <input type="text" id="url" name="url" value="$!item.url"
+                <input type="text" id="url" name="url" th:value="${item?.url}"
                        placeholder="请填写节点地址,ip:port，如：(127.0.0.1:2123)或者域名" class="layui-input"
                        required
                        lay-verify="required">
@@ -70,7 +63,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">节点账号</label>
             <div class="layui-input-block">
-                <input type="text" id="loginName" name="loginName" value="$!item.loginName" placeholder="请填写节点登录账号"
+                <input type="text" id="loginName" name="loginName" th:value="${item?.loginName}" placeholder="请填写节点登录账号"
                        class="layui-input" required
                        lay-verify="required">
             </div>
@@ -78,7 +71,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">节点密码</label>
             <div class="layui-input-block">
-                <input type="password" id="loginPwd" name="loginPwd" value="$!item.loginPwd"
+                <input type="password" id="loginPwd" name="loginPwd" th:value="${item?.loginPwd}"
                        placeholder="请填写节点登录密码,节点默认请查看节点安装文档"
                        class="layui-input"
                        required
@@ -88,7 +81,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">超时时间</label>
             <div class="layui-input-block">
-                <input type="text" id="timeOut" name="timeOut" value="#if(!$item)10000#else$!item.timeOut#end"
+                <input type="text" id="timeOut" name="timeOut" th:value="${item?.timeOut}"
                        placeholder="节点请求超时时间（毫秒）"
                        class="layui-input"
                        required
@@ -98,9 +91,8 @@
         <div class="layui-form-item" style="padding-left: 20%">
             <button class="layui-btn layui-btn-normal" lay-submit lay-filter="submitNode" id="project_submit">提交
             </button>
-            #if($item)
-                <a class="layui-btn layui-btn-warm" data-id="$item.id" id="delete_node">删除</a>
-            #end
+
+            <a th:if="${item}" class="layui-btn layui-btn-warm" th:data-id="${item.id}" id="delete_node">删除</a>
         </div>
     </form>
 </div>
