--- a/modules/server/src/main/resources/vm/node/list.html
+++ b/modules/server/src/main/resources/vm/node/list.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 
-<head th:include="common/head::head">
-</head>
+<head th:replace="common/head::head"></head>
 <body>
 
 <div class="layui-row" th:if="${session.user.isSystemUser()}">
