--- a/modules/server/src/main/resources/vm/outgiving/list.html
+++ b/modules/server/src/main/resources/vm/outgiving/list.html
@@ -11,7 +11,64 @@
 
 
 <div class="layui-collapse" style="margin: 10px;" lay-accordion lay-filter="node" th:unless="${#lists.isEmpty(array)}">
-
+    <script type="text/javascript">
+        var col = [
+            {field: 'nodeName', title: '节点名称'},
+            {field: 'projectName', title: '项目名称'},
+            {
+                field: 'projectStatus', title: '项目状态', templet: function (d) {
+                    return '<div title="请到控制台中管理项目">\n' +
+                        '                                <input type="checkbox" id="status_' + d.nodeId + d.projectId + '" disabled\n' +
+                        '                                       name="status"\n' +
+                        '                                       lay-skin="switch"\n' +
+                        '                                       lay-text="运行中|未运行">\n' +
+                        '                            </div>'
+                }
+            },
+            {
+                field: 'outGivingStatus', title: '分发状态', templet: function (d) {
+                    return '<div class="viewMsg" style="color:red;font-weight: bold;" outGivingResult=' + d.outGivingResult + '>' + d.outGivingStatus + '</div>'
+                }
+            },
+            {field: 'lastTime', title: '最后分发时间'},
+            {field: 'opt', title: '操作', toolbar: "#bar_opt"}
+        ];
+        var config = {
+            cols: [col],
+            url: "./getItemData.json",
+            loading: true,
+            response: {
+                statusCode: 200
+            },
+            done: function (data) {
+                //
+                $("table").delegate(".viewMsg", "click", function () {
+                    var outGivingResult = $(this).attr("outGivingResult");
+                    if (!outGivingResult || outGivingResult == "") {
+                        return;
+                    }
+                    layer.alert(outGivingResult);
+                });
+            }
+        };
+    </script>
+    <script type="text/html" id="bar_opt">
+        <th:block th:if="${session.user.isServerManager()}">
+            {{# if(d.projectName){ }}
+            <a lay-event="conslone" class="layui-btn layui-btn-sm layui-btn-normal">
+                控制台
+            </a>
+            <a lay-event="file" class="layui-btn layui-btn-sm">
+                文件管理
+            </a>
+            {{# }else{ }}
+            数据异常
+            {{# } }}
+        </th:block>
+        <th:block th:unless="${session.user.isServerManager()}">
+            没有权限
+        </th:block>
+    </script>
     <div class="layui-colla-item" th:each="item : ${array}">
         <div class="layui-colla-title" th:itemId="${item.id}">
             <div th:title="${item.id}" th:text="${item.name}+'【'+${item.outGivingProject?'独立':'关联'}+'】'">
@@ -39,95 +96,54 @@
         </div>
         <div class="layui-colla-content">
             <form class="layui-form" action="">
-                <table class="layui-table" th:id="'table_'+${item.id}">
-                    <thead>
-                    <tr>
-                        <th>节点名称</th>
-                        <th>项目名称</th>
-                        <th>项目状态</th>
-                        <th>分发状态</th>
-                        <th>最后分发时间</th>
-                        <th>操作</th>
-                    </tr>
-                    </thead>
-                    <tbody id="tbody_$item.id">
-
-                    #set($dataOK=true)
-
-                    <tr th:projectId="${tr.projectId}" th:nodeId="${tr.nodeId}" th:if="${nodeData[tr.nodeId]}"
-                        th:each="tr : ${item.outGivingNodeProjectList}">
-                        <td>
-                            <div th:title="${tr.nodeId}" th:text="${nodeData[tr.nodeId].name}"></div>
-                        </td>
-                        <td>
-
-                            <div th:title="${tr.projectId}" th:if="${nodeData.get(tr.nodeId) && nodeData.get(tr.nodeId).projects &&
-                            nodeData[tr.nodeId].projects[tr.projectId]}"
-                                 th:text="${nodeData[tr.nodeId]?.projects?[tr.projectId]?.name}"></div>
-                            #else
-                            #set($dataOK=false)
-                            <div th:title="${tr.projectId}" style="color: red;">没有数据</div>
-                            #end
-
-                        </td>
-                        <td>
-                            <div title="请到控制台中管理项目">
-                                <input type="checkbox" id="status_$!tr.nodeId$!tr.projectId" disabled
-                                       name="status"
-                                       lay-skin="switch"
-                                       lay-text="运行中|未运行">
-                            </div>
-                        </td>
-                        <td>
-                            <div class="viewMsg"
-                                 th:style="${tr.status!=2?'color:red;font-weight: bold;':''}"
-                                 th:msgId="'msg_'+${tr.nodeId}${tr.projectId}" th:text="${tr.statusMsg}">
-                            </div>
-                        </td>
-                        <td>
-                            $tr.lastOutGivingTime
-                        </td>
-                        <td>
-                            #if($user.isServerManager())
-                            #if($dataOK)
-                            <button op="conslone" nodeId="$tr.nodeId" projectId="$tr.projectId"
-                                    class="layui-btn layui-btn-sm layui-btn-normal">
-                                控制台
-                            </button>
-                            <button op="file" nodeId="$tr.nodeId" projectId="$tr.projectId"
-                                    class="layui-btn layui-btn-sm">
-                                文件管理
-                            </button>
-                            #else
-                            #end
-                            #else
-                            没有权限
-                            #end
-                        </td>
-                    </tr>
-                    #else
-                    <tr>
-                        <td colspan="6" align="center">
-                            $tr.nodeId 节点不可用或者已经暂停
-                        </td>
-                    </tr>
-                    #end
-                    <script type="text/html" id="msg_$!tr.nodeId$tr.projectId">$!tr.result</script>
-                    <script type="text/javascript">
-                        //
-                        asyncFn.push(function () {
-                            getProjectStatus("$tr.nodeId", "$tr.projectId");
-                        });
-                    </script>
-                    #end
-                    </tbody>
+                <table class="layui-table" th:id="'table_'+${item.id}" th:lay-filter="'table_'+${item.id}">
                 </table>
+                <script type="text/javascript">
+                    //
+                    asyncFn.push(function () {
+                        config.id = 'table_[[${item.id}]]';
+                        config.elem = '#table_[[${item.id}]]';
+                        config.where = {
+                            id: "[[${item.id}]]"
+                        };
+                        tableRender(config);
+
+                        // 点击事件
+                        table.on('tool(table_[[${item.id}]])', function (obj) {
+                            var op = obj.event;
+                            var data = obj.data;
+                            if ("conslone" == op || "file" == op) {
+                                var nodeId = data.nodeId;
+                                var projectId = data.projectId;
+                                var url = "file" == op ? "/node/manage/file/list.html" : "/node/manage/console";
+                                url = urlUpdateParams(url, "nodeId", nodeId);
+                                url = urlUpdateParams(url, "id", projectId);
+                                var index = layer.open({
+                                    type: 2,
+                                    title: "file" == op ? '文件管理' : '控制台',
+                                    shade: [0.4, '#fff'],
+                                    maxmin: true,
+                                    area: ['80%', '90%'],
+                                    content: url
+                                });
+                                layer.full(index);
+                            }
+                        });
+                    });
+                </script>
+                <script type="text/javascript" th:outGivingItemProject="${item.id}" th:nodeId="${tr.nodeId}"
+                        th:projectId="${tr.projectId}"
+                        th:each="tr : ${item.outGivingNodeProjectList}">
+                    asyncFn.push(function () {
+                        getProjectStatus("[[${tr.nodeId}]]", "[[${tr.projectId}]]");
+                    });
+                </script>
             </form>
         </div>
     </div>
 
-
-    <h1 align="center" th:if="${#lists.isEmpty(array)}">还没有任何分发项目，请先创建分发项目</h1>
+</div>
+<h1 align="center" th:if="${#lists.isEmpty(array)}">还没有任何分发项目，请先创建分发项目</h1>
 
 </body>
 <script type="text/javascript">
@@ -137,26 +153,10 @@
         $("button[op]").click(function (e) {
             layui.stope(e);
             var op = $(this).attr("op");
-            if ("conslone" == op || "file" == op) {
-                var nodeId = $(this).attr("nodeId");
-                var projectId = $(this).attr("projectId");
-                var url = "file" == op ? "/node/manage/file/list.html" : "/node/manage/console";
-                url = urlUpdateParams(url, "nodeId", nodeId);
-                url = urlUpdateParams(url, "id", projectId);
-                var index = layer.open({
-                    type: 2,
-                    title: "file" == op ? '文件管理' : '控制台',
-                    shade: [0.4, '#fff'],
-                    maxmin: true,
-                    area: ['80%', '90%'],
-                    content: url
-                });
-                layer.full(index);
-                return false;
-            }
+            console.log(op);
             if ("edit" == op) {
                 var editId = $(this).attr("id");
-                if ($(this).attr("outGivingProject") == "true") {
+                if ($(this).attr("outGivingProject") === "true") {
                     editAllProject(editId);
                 } else {
                     editProject(editId);
@@ -176,26 +176,18 @@
             }
             if ("refresh" == op) {
                 var itemId = $(this).attr("itemId");
-                $("#tbody_" + itemId).find("tr").each(function () {
+                $("script[outGivingItemProject='" + itemId + "']").each(function (i, item) {
                     var projectId = $(this).attr("projectId");
                     var nodeId = $(this).attr("nodeId");
                     if (projectId && nodeId) {
                         getProjectStatus(nodeId, projectId);
                     }
-                })
+                    table.reload('table_' + itemId, {});
+                });
             }
             return false;
         });
 
-        //
-        $("div[class='viewMsg']").click(function () {
-            var msgId = $(this).attr("msgId");
-            var html = document.getElementById(msgId).innerHTML;
-            if (!html || html == "") {
-                return;
-            }
-            layer.alert(html);
-        });
 
         element.on('collapse(node)', function (data) {
             $("button[op='refresh']").hide();
@@ -243,7 +235,7 @@
                 id: projectId
             },
             success: function (data) {
-                if (200 == data.code) {
+                if (200 === data.code) {
                     var pId = data.data.pId;
                     if (pId > 0) {
                         $("#status_" + nodeId + projectId)
